Entrega de la practica

--- a/admin/citas/edit.html
+++ b/admin/citas/edit.html
@@ -87,7 +87,7 @@
                             <div class="card-body">
                                 <form action="">
                                     <div class="form-group row">
-                                        <label for="name" class="col-12 col-sm-2 col-form-label">Nombre</label>
+                                        <label for="name" class="col-12 col-sm-2 col-form-label">Nombre completo</label>
                                         <div class="col-12 col-sm-10">
                                             <input type="text" class="form-control" id="name" placeholder="Nombre" value="Gerardo Cabrera">
                                         </div>
