--- a/admin/citas/show.html
+++ b/admin/citas/show.html
@@ -89,7 +89,7 @@
                                     <div class="col-12 col-sm-6">
                                         <h3 class="text-center">Datos personales</h3>
                                         <div class="form-group">
-                                            <p><strong>Nombre del cliente:</strong> Gerardo Rafael Cabrera Herrera</p>
+                                            <p><strong>Nombre completo del cliente:</strong> Gerardo Rafael Cabrera Herrera</p>
                                         </div>
                                         <div class="form-group">
                                             <p><strong>Email del cliente:</strong> gera_cabrera@correo.com</p>
