--- a/webpage/booking-vaccine.html
+++ b/webpage/booking-vaccine.html
@@ -64,18 +64,17 @@
                             <div class="figura">
                                 <div class="trianguloHeader1"></div>
                             </div>
-                            <h1 class="titlePrimary">Lucha contra el virus</h1>
-                            <h2 class="titlePrimary">Con las vacunas</h2>
-                            <p>Detengamos esta pandemia matando el virus con una vacuna, no permita que usted y su
-                                familia se infecten.</p>
-                            <div class="row">
+                            <h1 class="titlePrimary">Lucha contra el virus<br>Con las vacunas</h1>
+                            <p class="pr-5">Detengamos esta pandemia matando el virus con una vacuna, no permita que usted y su familia se
+                                infecten.</p>
+                            <div class="row pr-5">
                                 <div class="col-12 col-sm-6">
-                                    <p><span class="icon-hero-info"><i class="fas fa-shield-alt"></i></span> <span
-                                            class="titleSecondary">Mejor protección</span></p>
+                                    <p><span class="icon-hero-info"><i class="fas fa-shield-alt"></i></span> <span class="titleSecondary">Mejor
+                                            protección</span></p>
                                 </div>
                                 <div class="col-12 col-sm-6">
-                                    <p><span class="icon-hero-info"><i class="fas fa-star"></i></span> <span
-                                            class="titleSecondary">Vacunas aprobadas</span></p>
+                                    <p><span class="icon-hero-info"><i class="fas fa-star"></i></span> <span class="titleSecondary">Vacunas
+                                            aprobadas</span></p>
                                 </div>
                             </div>
                             <div class="figura">
